<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">

    <FrameLayout
            android:layout_width="412dp"
            android:layout_height="93dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/frameLayout"
            android:background="#673AB7">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:context=".MainActivity">
            <TextView
                    android:text="@string/holaUsuarioText"
                    android:layout_width="213dp"
                    android:layout_height="40dp" android:id="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="23dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="35dp" android:layout_marginEnd="327dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintVertical_bias="0.833" android:textSize="20sp"
                    android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <TextView
            android:layout_width="249dp"
            android:layout_height="50dp" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Hola"
            android:textSize="34sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41" app:layout_constraintHorizontal_bias="0.59"/>
    <Button
            android:text="@string/Volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:layout_marginTop="106dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp" android:layout_marginEnd="154dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="279dp" android:onClick="volver"/>
</androidx.constraintlayout.widget.ConstraintLayout>