<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="376dp"
            android:layout_height="82dp"
            android:hint="@string/hintPersonalizado"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="59dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/textInputEditText"
            app:layout_constraintHorizontal_bias="0.647"/>
    <FrameLayout
            android:layout_width="394dp"
            android:layout_height="74dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:id="@+id/frameLayout"
            android:background="#673AB7">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">
            <TextView
                    android:text="@string/holaUsuarioText"
                    android:layout_width="213dp"
                    android:layout_height="40dp" android:id="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="23dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="35dp" android:layout_marginEnd="327dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintVertical_bias="0.833" android:textSize="20sp"
                    android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <Button
            android:text="@string/botonAceptar"
            android:layout_width="124dp"
            android:layout_height="53dp" android:id="@+id/button"
            android:layout_marginEnd="329dp" app:layout_constraintEnd_toEndOf="@id/textInputEditText"
            app:layout_constraintStart_toStartOf="@id/textInputEditText" android:layout_marginStart="18dp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:layout_constraintHorizontal_bias="0.0" android:onClick="introducirNombre" android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>